# Fredi

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  voiceloop_jni.cpp
app/src/main/java/com/example/voiceloop/: MainActivity.kt  VoiceLoopService.kt
docs/: BUILD.md
